# datatalksclub-faq

./: .gitignore  .~lock.test_links.docx#  CONTRIBUTING.md  Makefile  README.md  agents.md  clean_questions.py  data-engineering-zoomcamp.md  debug_links.py  debug_real_links.py  debug_url.py  detailed_analysis.py  examine_xml.py  examine_xml_simple.py  faq.sh  faq_processor.py  find_hyperlinks.py  generate.py  generate.py.backup  generate_website.py  index.md  machine-learning-zoomcamp.md  main.py  mlops-zoomcamp.md  process_faq.py  pyproject.toml  quick_test.py  rename_files.py  run_tests.py  test_issue.txt  test_links.docx  test_links.py  test_real_hyperlinks.py  test_url_conversion.py  validate_questions.py
.github/ISSUE_TEMPLATE/: faq-proposal.yml
.github/workflows/: build-website.yml  faq-automation.yml
.verdent/: project_rules.md
_layouts/: base.html  course.html  default.html  index.html
_questions/data-engineering-zoomcamp/: 00e8093b90_running-out-of-storage-when-us.md  01092d660a_spark-standalone-mode-on-windo.md  0131ac93ac_gcp-bq-caution-in-using-bigq.md  (+453 more)
cache/: llm-zoomcamp.docx  mlops-zoomcamp.docx
faq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
faq_automation/: __init__.py  actions.py  cli.py  core.py  github_actions.py  rag_agent.py
notebooks/: process-questions.ipynb  rag.ipynb  read-zip.ipynb
scripts/: extract_issue_fields.py  write_faq_decision_output.py
tests/: README.md  __init__.py  test_generate_website.py
utils/: process_faq.py  rename_files_3digit.py  reset_sort_order_simple.py
(+5479 files in other folders)
